--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,15 @@
         {% endblock %}
     </head>
     <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-1">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbar-collapsable">
+                <a class="nav-link text-black-50" href="{{ path('app_login') }}">Log In</a>
+                <a href="#" class="btn btn-dark">Sign up</a>
+            </div>
+        </div>
+    </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
